gpio_macros/tests/gpio_pin_accidental_erased.stderr
Inherited
error: An identifier with the ^P[A-H][0-9]{1,2}$ pattern was expected but "PAx" was supplied
 --> $DIR/gpio_pin_accidental_erased.rs:3:1
  |
3 | gpio_pin!(PAx);
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
