gpio_macros/tests/gpio_pin_accidental_erased.rs
use gpio_macros::gpio_pin;

gpio_pin!(PAx);

fn main() {}